# intt-translation

./: SConstruct  pyproject.toml
data/STEP/: NT_aligned.json
scripts/: convert_from_aligned_step.py  convert_from_xml.py  convert_sqlite_to_json.py  embed_document.py  inspect_translations.py  make_prompt.py  postprocess.py  score_translation.py  translate_document_aya.py.old  translate_with_sqlite.py  utils.py
