[project]
name = "intt-translation"
version = "0.1.0"
description = ""
authors = [
    {name = "Hope",email = "hope.mcgovern@cl.cam.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scons (>=4.9.1,<5.0.0)",
    "steamroller @ git+https://github.com/hmcgovern/steamroller.git",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "ujson (>=5.10.0,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "accelerate (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
